# sim800_with_console

./: CMakeLists.txt  README.md  partitions_example.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/cmd_nvs/: CMakeLists.txt
components/cmd_system/: CMakeLists.txt
components/cmd_wifi/: CMakeLists.txt  cmd_wifi.c
components/console_main/: CMakeLists.txt  console_main.c
components/console_main/include/: console_main.h
components/gsm/: CMakeLists.txt  gsm.c
components/lillygo/: CMakeLists.txt  lillygo.c
components/lillygo/include/: lillygo.h
components/myconsole/: CMakeLists.txt  console_main.c
components/myconsole/cmd_gsm/: cmd_gsm.c  cmd_parser.c  console_helper2.c
components/myconsole/cmd_gsm/include/: cmd_gsm.h
components/myconsole/cmd_gsm/priv_include/: cmd_gsm_private.h  cmd_parser.h  console_helper2.h
components/myconsole/cmd_system/: cmd_system.c
components/myconsole/cmd_wifi/include/: cmd_decl.h
components/myconsole/include/: console_main.h
components/sim800/: CMakeLists.txt  LICENSE  sim800.c
components/sim800/Include/: sim800.h
components/sim800/console/: console.c  console_commands.c  console_helper.c
components/sim800/console/private_include/: console_commands.h  console_helper.h
components/sim800/gsm/: gsm.c
components/sim800/gsm/include/: gsm.h
components/sim800/main/: sim800.c
components/sim800/main/include/: sim800.h
components/sim800/priv_include/: web_defs.h
components/sim800/sms/: sms.c
components/sim800/sms/include/: sms.h
dupa/: Kconfig  main.c
main/: CMakeLists.txt  Kconfig  main.c
